--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,36 +1,34 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: techsolutions-ingress
+  name: kastro-ingress
   namespace: default
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
 spec:
-  tls:
-  - hosts:
-    - techsolutions.yourdomain.com
-    secretName: techsolutions-tls
   rules:
-  - host: techsolutions.yourdomain.com
-    http:
-      paths:
-      - path: /(.*)
-        pathType: Prefix
-        backend:
-          service:
-            name: techsolutions-service
-            port:
-              number: 80
   - http:
       paths:
-      - path: /(.*)
+      - path: /about
         pathType: Prefix
         backend:
           service:
-            name: techsolutions-service
+            name: about-service
+            port:
+              number: 80
+      - path: /contact
+        pathType: Prefix
+        backend:
+          service:
+            name: contact-service
+            port:
+              number: 80
+      - path: /services
+        pathType: Prefix
+        backend:
+          service:
+            name: services-service
             port:
               number: 80
